--- a/laravel-project/package.json
+++ b/laravel-project/package.json
@@ -2,7 +2,8 @@
     "private": true,
     "scripts": {
         "dev": "vite",
-        "build": "vite build"
+        "build": "vite build",
+        "watch": "npm-watch"
     },
     "devDependencies": {
         "@popperjs/core": "^2.11.6",
@@ -11,7 +12,10 @@
         "laravel-vite-plugin": "^0.7.2",
         "lodash": "^4.17.19",
         "postcss": "^8.1.14",
-        "sass": "^1.56.1",
+        "sass": "^1.66.1",
         "vite": "^4.0.0"
+    },
+    "dependencies": {
+        "npm-watch": "^0.11.0"
     }
 }
