--- a/laravel-project/.gitignore
+++ b/laravel-project/.gitignore
@@ -1,6 +1,7 @@
 /node_modules
 /public/build
 /public/hot
+/public/images
 /public/storage
 /storage/*.key
 /vendor
@@ -16,3 +17,4 @@ yarn-error.log
 /.fleet
 /.idea
 /.vscode
+
